fix: re-align customization variable names and usage (#1530)

--- a/CopilotKit/examples/next-openai/src/styles/globals.css
+++ b/CopilotKit/examples/next-openai/src/styles/globals.css
@@ -1,8 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.copilotKitHeader {
-    --copilot-kit-primary-color: rgb(255, 255, 255);
-    --copilot-kit-contrast-color: rgb(28, 28, 28);
-}
