--- a/examples/coagents-research-canvas/ui/src/app/globals.css
+++ b/examples/coagents-research-canvas/ui/src/app/globals.css
@@ -85,10 +85,6 @@ body {
   border-radius: 0.5rem 0.5rem 0.5rem 0;
 }
 
-.copilotKitMessage svg {
-  color: white !important;
-}
-
 .copilotKitChat {
   background-color: #e0e9fd;
 }
